# ros_asr

./: CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml  run-ros-asr-baxter.sh  run-ros-asr.sh
launch/: end_effector_voice_control.launch
scripts/: command_subscriber.py  ee_command_solver.py  ee_trajectory_client.py  ee_voice_control.py
src/: asr.sh  compile_grammar.sh  configure.sh  install_packages.sh  install_portaudio.sh  kaldi.mk  kaldi.mk.bak  kaldi_relay.cpp  nnet-decode-basic.sh  path.mk  path.sh  path_config.sh  tts_test.cpp
src/basic_src/: Makefile  RingBuffer.cc  RingBuffer.h  my-online.h  new-sf-controller.cc  new-sf-controller.h  sf-data-source.cc  sf-data-source.h  sf-decode-config.cc  sf-decode-config.h  sf-generic-config.cc  sf-generic-config.h  sf-generic-decoder.cc  sf-generic-decoder.h  sf-gmm-decoder.cc  sf-gmm-decoder.h  sf-nnet-config-threaded.cc  sf-nnet-config-threaded.h  sf-nnet-decoder.cc  sf-nnet-decoder.h  sf-nnet-threaded-decoder.cc  sf-nnet-threaded-decoder.cc.bak  sf-nnet-threaded-decoder.h  sf-output.cc  sf-output.h
src/grammar/: Utility.hh  commands(backup).jsgf  commands(tb).jsgf  commands.jsgf  dyn_grammar_lang.sh  fsm_to_fst.sh  healthy_living_complete.jsgf  jsgf_to_fsm.sh  make_beep_dict.sh  make_corpus.py  make_fst.sh  make_grammar_lang.sh  miro.jsgf  my-mkgraph.sh  old_miro.jsgf  path.sh  pepper.jsgf  pioneer.jsgf  questions.jsgf  review.jsgf  robo_vocab.py  smalltalk.jsgf  test.jsgf  testquizdialog.jsgf
src/portaudio/: Makefile  Makefile.bak  Makefile.bk  Makefile.in  config.status  libtool
(+1782 files in other folders)
